# Super-Dongle-Code

./: .gitignore  Makefile  README.md  message.proto  octave-workspace  udp_count.py  udp_dsp_recv.py  udp_recv.py  udp_recv_matr.py  udp_recv_pklr.py  udp_send_msg.py  udp_set_gain.py  udp_set_srate.py
dumps/: lab_30khz.pkl  lab_32.5khz.pkl  lab_35khz.pkl  lab_37.5khz.pkl  lab_40Khz.pkl
inc/: dsp.h  main.h  udp_echoserver.h
libs/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
libs/Ethernet/include/: fsdata.h  lwipopts.h  stm32f4x7_eth_bsp.h
libs/Ethernet/source/: fsdata.c  httpd_cgi_ssi.c  netconf.c  stm32f4x7_eth_bsp.c
libs/STM32F4x7_ETH_Driver/inc/lwip/: opt.h
libs/STM32F4x7_ETH_Driver/src/: ethernetif.c
libs/cmsis/cmsis_boot/: stm32f4xx.h
libs/cmsis/cmsis_boot/startup/: startup_stm32f4xx.c
libs/cmsis/cmsis_lib/include/: misc.h
libs/nanopb/generator/proto/: Makefile
pool_data/: convention.txt
src/: dsp.c  main.c  system_stm32f4xx.c  udp_echoserver.c
sub_code/: CMakeLists.txt  TrackModeImplementation.c  convert_pkl.py  cstream.py  ctrack.py  ctrack_stream.pyx  ctrack_util.pyx  fun_with_udp.c  gen_samples.py  heading.c  simulator_receiver.c  simulator_receiver.cpp  split_csv.py  track.py  track_util.py  udp_receiver.c  udp_receiver.h
sub_code/c_track/: TrackModeImplementation.c  simulator_receiver.cpp  udp_receiver.c
sub_code/cython_track/: cstream.py  ctrack_stream.pyx  ctrack_stream.pyxbld
sub_code/matlab_scripts/: sandbox.m  sandbox.m~
sub_code/synthetic_data/: compare_synthetic_data.m
